# tsb

./: .gitignore  Cargo.toml  Dockerfile  PRD.md  README.md  patch.rs  patch2.rs  tmp-deps.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: pr-check.yml  release.yml  sync-initializr.yml
resources/: dependencies.json  initializr-metadata.json
resources/templates/common/: Application.java  Application.kt  ApplicationTests.java  ApplicationTests.kt  application.properties
resources/templates/gradle/: build.gradle  settings.gradle
resources/templates/gradle-kotlin/: build.gradle.kts  settings.gradle.kts
resources/templates/maven/: pom.xml
src/: app.rs  config.rs  generator.rs  initializr.rs  main.rs  model.rs
src/ui/: apps_table.rs  beans_table.rs  dashboard.rs  describe.rs  dialog.rs  dumps_table.rs  edit_logger.rs  endpoints_table.rs  env_table.rs  header.rs  loggers_table.rs  mappings_table.rs  mod.rs  new_project.rs  resources.rs  server_dialog.rs  splash.rs  thread_viz.rs
