[package]
name = "tspring"
version = "1.0.0"
edition = "2021"
description = "Terminal UI for Spring Boot - A modern TUI for managing Spring Boot applications"
license = "MIT"
repository = "https://github.com/huseyinbabal/tsb"
homepage = "https://github.com/huseyinbabal/tsb"
keywords = ["spring-boot", "tui", "terminal", "actuator", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
authors = ["Huseyin Babal"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0"
minijinja = "2.19.0"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { version = "1.51.1", features = ["full"] }

[dev-dependencies]
wiremock = "0.6"
